correction alignement containers mises

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -104,6 +104,7 @@
 	.playerInfoContainer {
 		display:inline-block;
 		width: 49%;
+		vertical-align: top;
 	}
 
 	.playerInfoContainer.first {
